--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -33,7 +33,7 @@
                                                 <rect key="frame" x="0.0" y="28" width="560" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="gny-aK-qke" id="DsV-UZ-K9d">
-                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="59.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="60"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chicago IL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Oq9-B0-NHM">
@@ -161,7 +161,7 @@
                     <navigationItem key="navigationItem" title="Find Parking" id="QQS-us-8wq">
                         <barButtonItem key="leftBarButtonItem" title="Temp Checkout button" id="15V-hi-rKn">
                             <connections>
-                                <segue destination="Wmp-AT-N6e" kind="show" id="au9-kq-r3V"/>
+                                <action selector="tempCheckoutButtonPressed:" destination="Vax-OI-bt8" id="OkD-gD-9Gb"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Close" id="Pda-yU-gs7">
@@ -199,10 +199,10 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="reservationInfoCell" rowHeight="86" id="8mD-ew-oY8" customClass="ReservationInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="113.5" width="600" height="86"/>
+                                <rect key="frame" x="0.0" y="114" width="600" height="86"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="8mD-ew-oY8" id="9kl-FT-qAM">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="85.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="86"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zva-vq-ti5">
@@ -254,10 +254,10 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="personalInfoCell" rowHeight="51" id="J7z-cJ-szY" customClass="PersonalInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="199.5" width="600" height="51"/>
+                                <rect key="frame" x="0.0" y="200" width="600" height="51"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="J7z-cJ-szY" id="5oC-PN-sJo">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="50.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="51"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YfN-aw-GbW">
@@ -266,37 +266,41 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UjI-qr-XaV">
-                                            <rect key="frame" x="115" y="15" width="93" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VNN-ZK-CiY">
+                                            <rect key="frame" x="115" y="0.0" width="485" height="51"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="51" id="C4h-ju-mhS"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="YfN-aw-GbW" firstAttribute="centerY" secondItem="5oC-PN-sJo" secondAttribute="centerY" id="4La-yA-4TS"/>
-                                        <constraint firstItem="UjI-qr-XaV" firstAttribute="centerY" secondItem="5oC-PN-sJo" secondAttribute="centerY" id="Z6s-Fe-psM"/>
-                                        <constraint firstItem="UjI-qr-XaV" firstAttribute="leading" secondItem="5oC-PN-sJo" secondAttribute="leadingMargin" constant="100" id="rFF-Kv-O5U"/>
+                                        <constraint firstItem="VNN-ZK-CiY" firstAttribute="leading" secondItem="5oC-PN-sJo" secondAttribute="leadingMargin" constant="100" id="c91-59-XIF"/>
+                                        <constraint firstAttribute="bottom" secondItem="VNN-ZK-CiY" secondAttribute="bottom" id="uLF-hl-tZx"/>
+                                        <constraint firstItem="VNN-ZK-CiY" firstAttribute="top" secondItem="5oC-PN-sJo" secondAttribute="top" id="xYP-xi-HxD"/>
+                                        <constraint firstAttribute="trailing" secondItem="VNN-ZK-CiY" secondAttribute="trailing" id="xa9-th-xEY"/>
                                         <constraint firstItem="YfN-aw-GbW" firstAttribute="leading" secondItem="5oC-PN-sJo" secondAttribute="leadingMargin" id="xit-Of-zbM"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="primaryLabel" destination="UjI-qr-XaV" id="5M6-Vv-Tcj"/>
+                                    <outlet property="textField" destination="VNN-ZK-CiY" id="rcc-co-Bcn"/>
                                     <outlet property="titleLabel" destination="YfN-aw-GbW" id="ju2-1h-OAi"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="paymentInfoCell" rowHeight="153" id="WwR-3h-HOo" customClass="PaymentInfoTableViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="250.5" width="600" height="153"/>
+                                <rect key="frame" x="0.0" y="251" width="600" height="153"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="WwR-3h-HOo" id="OvW-qC-rsQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="152.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="153"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Af1-xO-onX">
                                             <rect key="frame" x="15" y="10" width="570" height="60"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YZs-t6-1Oa">
-                                                    <rect key="frame" x="8" y="8" width="58.5" height="44"/>
+                                                    <rect key="frame" x="8" y="8" width="59" height="44"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6MB-Ib-SHr">
                                                             <rect key="frame" x="8" y="8" width="43" height="28"/>
@@ -318,6 +322,7 @@
                                                 </textField>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <gestureRecognizers/>
                                             <constraints>
                                                 <constraint firstItem="gSa-XS-aCx" firstAttribute="top" secondItem="Af1-xO-onX" secondAttribute="top" id="4nB-rg-7PY"/>
                                                 <constraint firstAttribute="bottom" secondItem="YZs-t6-1Oa" secondAttribute="bottom" constant="8" id="93c-Zf-YsD"/>
@@ -349,6 +354,8 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="cardImage" destination="6MB-Ib-SHr" id="ENA-Vj-gr7"/>
+                                    <outlet property="creditCardContainerView" destination="Af1-xO-onX" id="HPe-gg-S1f"/>
+                                    <outlet property="creditCardTextField" destination="gSa-XS-aCx" id="XjJ-qC-YYj"/>
                                     <outlet property="creditCardView" destination="YZs-t6-1Oa" id="viF-Jb-ZWe"/>
                                 </connections>
                             </tableViewCell>
@@ -387,7 +394,4 @@
     <resources>
         <image name="ic_expand_more_36pt" width="36" height="36"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="au9-kq-r3V"/>
-    </inferredMetricsTieBreakers>
 </document>
