--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mRm-nn-PCg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mRm-nn-PCg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -357,6 +357,7 @@
                                     <outlet property="creditCardContainerView" destination="Af1-xO-onX" id="HPe-gg-S1f"/>
                                     <outlet property="creditCardTextField" destination="gSa-XS-aCx" id="XjJ-qC-YYj"/>
                                     <outlet property="creditCardView" destination="YZs-t6-1Oa" id="viF-Jb-ZWe"/>
+                                    <outlet property="warningLabel" destination="Era-LR-Uob" id="Z0o-QZ-N7b"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
