--- a/SpotHero_iOS_Partner_SDK/Assets/PaymentButton.xib
+++ b/SpotHero_iOS_Partner_SDK/Assets/PaymentButton.xib
@@ -7,15 +7,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PaymentButton" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="g1b-OX-h4H">
-            <rect key="frame" x="0.0" y="0.0" width="458" height="50"/>
+        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="g1b-OX-h4H">
+            <rect key="frame" x="0.0" y="0.0" width="428" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <color key="backgroundColor" red="0.10980392160000001" green="0.59999999999999998" blue="0.01176470588" alpha="1" colorSpace="calibratedRGB"/>
-            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-            <state key="normal" title="Pay $8 and Confirm Parking">
+            <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
+            <inset key="imageEdgeInsets" minX="-8" minY="0.0" maxX="0.0" maxY="0.0"/>
+            <state key="normal" title="Pay $8 and Confirm Parking" image="success">
                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             </state>
-            <point key="canvasLocation" x="599" y="289"/>
+            <point key="canvasLocation" x="687" y="306"/>
         </button>
     </objects>
+    <resources>
+        <image name="success" width="25" height="25"/>
+    </resources>
 </document>
